--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pandas>=0.16
 numpy>=1.9
 seaborn>=0.7.0
 matplotlib
-nipy >=0.4.0
-pybids >=0.1
+nipy>=0.4.0
+pybids==0.5.1
 nipype >=0.13.1
 duecredit
